--- a/tools/roi-tool/index.html
+++ b/tools/roi-tool/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8" />
   <title>ROI Mapper</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header>
   <input type="file" id="imageInput" />
-  Fangradius (px):
-  <input type="number" id="radiusInput" value="100" />
+  <button id="radiusBtn">Fangradius setzen</button>
   <button id="rectBtn">Rectangle</button>
-  <button id="polyBtn">Polygon</button>
   <button id="exportBtn">Export JSON</button>
 </header>
+
+<div id="roiList"></div>
 
 <div id="workspace">
   <svg id="svg"></svg>
