--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h1>Alien Invasion – Data Tools</h1>
   <ul>
     <li><a href="./tools/review/" target="_blank">Review Tool</a></li>
-    <li><a href="./tools/roi-mapper/" target="_blank">ROI Mapper</a></li>
+    <li><a href="./tools/world-mapper-claude/" target="_blank">World Mapping Tool</a></li>
   </ul>
   <footer>© 2026 Source of Chaos</footer>
 </body>
