Add World Compositor Tool link to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <ul>
     <li><a href="./tools/review/" target="_blank">Review Tool</a></li>
     <li><a href="./tools/world-mapper-claude/" target="_blank">World Mapping Tool</a></li>
+    <li><a href="./tools/compositor/" target="_blank">World Compositor Tool</a></li>
   </ul>
   <footer>© 2026 Source of Chaos</footer>
 </body>
